MNT-17551 fixed styling for rule word wrapping

--- a/share/src/main/webapp/components/rules/rule-details.css
+++ b/share/src/main/webapp/components/rules/rule-details.css
@@ -11,6 +11,7 @@
 .rule-details h2
 {
    padding-bottom: 0.5em;
+   overflow-wrap: anywhere;    
 }
 
 .rule-details hr
